--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ const loadSound = (name) => {
 	return audio;
 };
 
-winSounds = [loadSound('win1'), loadSound('win2')];
-loseSounds = [loadSound('lose1'), loadSound('lose2')];
+winSounds = [loadSound('win1'), loadSound('win2'), loadSound('win3')];
+loseSounds = [loadSound('lose1'), loadSound('lose2'), loadSound('lose3')];
 
 let sounds = [];
 mioPlayer.soundNames.forEach(name => {
